<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="6dp"
            android:paddingBottom="6dp">

        <include
                android:id="@+id/layout_completable_install"
                layout="@layout/layout_completable_install"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp" />

        <include
                android:id="@+id/layout_single_joke"
                layout="@layout/layout_single_joke"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout_completable_install"
                android:layout_marginBottom="6dp" />

        <include
                android:id="@+id/layout_observable_jokes"
                layout="@layout/layout_observable_jokes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout_single_joke" />

    </RelativeLayout>

</ScrollView>