<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:context=".MainActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/btn_install"
            android:layout_alignTop="@+id/btn_install"
            android:layout_margin="6dp"
            android:gravity="center"
            android:text="COMPLETABLE"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"
            android:textStyle="bold" />

    <Button
            android:id="@+id/btn_install"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_margin="6dp"
            android:onClick="fakeInstall"
            android:text="install"
            android:textSize="10sp" />

    <ProgressBar
            android:id="@+id/loader_install"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/btn_install"
            android:layout_alignTop="@+id/btn_install"
            android:layout_margin="6dp"
            android:layout_toStartOf="@+id/btn_install"
            android:theme="@style/AppTheme"
            android:visibility="gone"
            tools:visibility="visible" />

    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/btn_install"
            android:background="@color/colorPrimaryDark" />

</RelativeLayout>