<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/btn_jokes"
            android:layout_alignTop="@+id/btn_jokes"
            android:layout_margin="6dp"
            android:gravity="center"
            android:text="OBSERVABLE"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"
            android:textStyle="bold" />

    <Button
            android:id="@+id/btn_jokes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_margin="6dp"
            android:onClick="randomJokes"
            android:text="new jokes"
            android:textSize="10sp" />

    <ProgressBar
            android:id="@+id/loader_jokes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/btn_jokes"
            android:layout_alignTop="@+id/btn_jokes"
            android:layout_margin="6dp"
            android:layout_toStartOf="@+id/btn_jokes"
            android:visibility="gone"
            tools:visibility="visible" />

    <TextView
            android:id="@+id/tv_jokes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_jokes"
            android:layout_margin="6dp"
            android:textSize="12sp"
            tools:text="Random jokes" />

</RelativeLayout>