...
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/btn_single_joke"
            android:layout_alignTop="@+id/btn_single_joke"
            android:layout_margin="6dp"
            android:gravity="center"
            android:text="SINGLE"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"
...
            android:id="@+id/btn_single_joke"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_margin="6dp"
            android:onClick="randomJoke"
            android:text="new joke"
            android:textSize="10sp" />

    <ProgressBar
            android:id="@+id/loader_single_joke"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
